# nixos-wizard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
isoimage/: config.nix
src/: drive.rs  drives.rs  installer.rs  lib.rs  macros.rs  main.rs  nix.rs  nixgen.rs  page.rs  widget.rs
src/installer/: drivepages.rs  mod.rs  networking.rs  systempkgs.rs  users.rs
