[package]
name = "nixos-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
